--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "concurrently": "^8.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -18,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "both" : "concurrently \"npm start \" \"cd backend && npm start \" "
+    "both": "concurrently \"npm start \" \"cd backend && npm start \" "
   },
   "eslintConfig": {
     "extends": [
